--- a/movie-manager/package.json
+++ b/movie-manager/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "http": "0.0.0",
+    "mongoose": "^5.0.16",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.3"
   }
